pkg/lang/syntax/testdata/ub/validate/invalid/factory/configuration-meta-field.ub
factory: {
  configurations: {
    formal: greet {}
  }

  actions: {
    say: greet.say {
      @configuration: configuration.formal.prefix
    }
  }
}
